[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/enemy5.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/EnemyType3.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 92.641, 85.7386 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1447.1, 29.2999 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 93.0938, 9 )

[node name="EnemyType3" type="KinematicBody2D"]
position = Vector2( 1, 0 )
collision_layer = 2147483650
collision_mask = 2147483657
script = ExtResource( 2 )

[node name="enemy" type="Sprite" parent="."]
position = Vector2( 36.3393, -110.508 )
scale = Vector2( 1.5634, 1.50769 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 36.4846, -112.092 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 33.9791, -104.271 )
scale = Vector2( 9.27511, 3.52269 )
process_parent = true
physics_process_parent = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.0980392, 0.0745098, 0.0745098, 1 )
position = Vector2( -7.40894, -101.308 )
shape = SubResource( 2 )

[node name="StompDetector" type="Area2D" parent="."]
modulate = Color( 0.14902, 0.0901961, 0.87451, 1 )
position = Vector2( 1, -72 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( 34.449, -117.566 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
